# mainsail-cnc

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  index.html  moonraker-cnc-update.conf  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-frontend.yml  ci.yml
E3CNC/E3CNC/: theme.json
E3CNC/examples/: machine-profile.example.yaml  update-manager.conf
E3CNC/macros/: README.md  e3cnc_macros.cfg
E3CNC/moonraker-cnc-agent/: __init__.py  mcp_server.py  moonraker.conf
E3CNC/post_processors/: Feeds.md  MPCNC.mch  MPCNC.tools  README.md
agent_docs/: CONTRIBUTING.md
ansible/: ansible.cfg
ansible/playbooks/: uninstall.yml
ansible/vars/: main.yml
config/examples/: update-manager.conf
cypress/e2e/: editor-validation.cy.ts
docs/: INSTALLATION.md  architecture.md  index.html  index.md
docs/plans/: deepening-opportunities.md
macros/: e3cnc_macros.cfg
moonraker-cnc-agent/: README.md  pyproject.toml
moonraker-cnc-agent/tests/: test_cnc_agent.py  test_mcp_server.py
scripts/: cnc_metadata_extractor.py  download_frontend.sh  install_to_moonraker.sh  post_update.sh  uninstall.sh
specs/: cnc-cleanup-plan.md  upstream-merges.md  vuetify-component-audit.md
src/: main.ts
src/components/: TheEditor.vue  TheSelectPrinterDialog.vue  TheSettingsMenu.vue  TheSidebar.vue  TheTopbar.vue
src/composables/: useCncOffsets.ts  useDashboard.ts
src/directives/: longpress.ts
src/locales/: cz.json  da.json  de.json  en.json  es.json  fr.json  hu.json  it.json  ja.json  ko.json  nl.json  pl.json  (+8 more)
tests/: vuetify-context-menu.spec.ts
(+233 files in other folders)
