[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moonraker-cnc-agent"
version = "0.1.0"
description = "CNC-specific Moonraker agent scaffold for Mainsail CNC workflows"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0.0",
]

[project.scripts]
moonraker-cnc-mcp = "moonraker_cnc_agent.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
